resolving the appointment problem

--- a/src/app/Admin/profil-admin/profil-admin.component.html
+++ b/src/app/Admin/profil-admin/profil-admin.component.html
@@ -60,10 +60,8 @@
            data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Rendez-vous sans médecin</h6>
-          <a class="collapse-item" href="rendez-vous">Rendez-vous avec médecin</a>
-
           <a class="collapse-item" href="rdvAvecMedecin">Rendez-vous sans  médecin</a>
-
+          <a class="collapse-item" href="rendez-vous">Rendez-vous accepté</a>
         </div>
       </div>
     </li>
