--- a/src/app/EspacePatient/login-patient/login-patient.component.html
+++ b/src/app/EspacePatient/login-patient/login-patient.component.html
@@ -9,8 +9,8 @@
     <input type="password"  formControlName="password" />
     <a href="" style="color: #0066FF; margin-left: 8rem; margin-top: 2rem !important;"  routerLink="/resetPassword" routerLinkActive="active">Mot de passe oublié </a>
 
-    <button type="submit" >Connnexion</button>
-    <button type="submit" class="btn2"  routerLink="/signPatient" routerLinkActive="active">Inscrire</button>
+    <button type="submit" routerLink="/rdvAvecMed" >Connnexion</button>
+    <button type="submit" class="btn2"  routerLink="/signPatient" >Inscrire</button>
   </div>
   </form>
 
