--- a/src/app/EspacePatient/login-patient/login-patient.component.scss
+++ b/src/app/EspacePatient/login-patient/login-patient.component.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .container {
-  margin-top: 2rem;
+  margin-top: 6rem !important;
   position: relative;
   width: 350px;
   height: 500px;
