--- a/src/app/EspacePatient/sign-up-patient/sign-up-patient.component.html
+++ b/src/app/EspacePatient/sign-up-patient/sign-up-patient.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<div class="login-root">
+<div class="login-root" style=" margin-top: 6rem !important;
+">
   <div class="box-root flex-flex flex-direction--column" style="min-height: 100vh;flex-grow: 1;">
     <div class="loginbackground box-background--white padding-top--64">
       <div class="loginbackground-gridContainer">
