--- a/src/app/acceuil-content/acceuil-content.component.html
+++ b/src/app/acceuil-content/acceuil-content.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container-fluid section">
+<div class="container-fluid section " style="margin-top: -8rem">
   <div class="container-fluid doctorBg">
     <img src="../assets/image/bcgdoctor.png">
     <div class="card info">
@@ -56,3 +56,4 @@
 </div>
 
 </div>
+<app-footer></app-footer>
