--- a/src/app/detail-profile/detail-profileM/detail-accpted-apnt/detail-accpted-apnt.component.html
+++ b/src/app/detail-profile/detail-profileM/detail-accpted-apnt/detail-accpted-apnt.component.html
@@ -2,14 +2,14 @@
 <div class="col" >
   <div class="row"  *ngIf="apntmnt" style="margin-top: 2rem">
     <div style="float: left">
-    <h3 style="color: #0066FF">{{apntmnt.patient.firstname}} {{apntmnt.patient.lastname}}</h3>
-    <h5 style="color: #3F6589">{{apntmnt.surgery.name}} </h5>
+      <h3 style="color: #0066FF">{{apntmnt.patient.firstname}} {{apntmnt.patient.lastname}}</h3>
+      <h5 style="color: #3F6589">{{apntmnt.surgery.name}} </h5>
     </div>
     <div style="float: right">
     <span style="color: #336DA5 ; margin-top: 1rem">
       Email:
     </span>
-    <p >{{apntmnt.patient.email}}</p>
+      <p >{{apntmnt.patient.email}}</p>
     </div>
 
   </div>
@@ -55,32 +55,32 @@
     <span style="color: #336DA5 ; margin-top: 1rem">
       Date de rendez-vous
     </span>
-   <h6 style="font-weight: bold">{{apntmnt.dateRDV | date: 'yyyy-MM-dd / hh:mm a'}}
-    <span><i class="bi bi-calendar-date-fill" style="color: indianred ;"></i></span>
-   </h6>
+    <h6 style="font-weight: bold">{{apntmnt.dateRDV | date: 'yyyy-MM-dd / hh:mm a'}}
+      <span><i class="bi bi-calendar-date-fill" style="color: indianred ;"></i></span>
+    </h6>
   </div>
 
 
-    <div class="card content" >
-      <h5 style="color: #3F6589">Description</h5>
-       <p>
-          {{apntmnt.note}}
-       </p>
+  <div class="card content" >
+    <h5 style="color: #3F6589">Description</h5>
+    <p>
+      {{apntmnt.note}}
+    </p>
 
-     </div>
+  </div>
 
-     <div class="card contentimg" >
-      <div class="image">
+  <div class="card contentimg" >
+    <div class="image">
       <img src="{{apntmnt.image}}">
-      </div>
+    </div>
 
     <div class="btn">
-    <button >Télécharger image</button>
+      <button >Télécharger image</button>
     </div>
-       <div class="row btns">
-         <button class="btn1" (click)="rejeterAp(apntmnt.id)">Rejeter</button>
-         <button class="btn2"  (click)="accpterAp(apntmnt.id)"  >Accepter</button>
-       </div>
+    <div class="row btns">
+      <button class="btn1" (click)="rejeterAp(apntmnt.id)">Rejeter</button>
+      <button class="btn2"  (click)="ValiderFacture(apntmnt.id)">Valider Facture</button>
+    </div>
 
-     </div>
+  </div>
 
