--- a/src/app/servicePatient/detail-parcours-medc/detail-parcours-medc.component.html
+++ b/src/app/servicePatient/detail-parcours-medc/detail-parcours-medc.component.html
@@ -31,7 +31,7 @@
 
     <div class="row btns">
 
-      <button class="btn2" style="margin-left: 4rem">prendre rendez-vous</button>
+      <button class="btn2" style="margin-left: 4rem" (click)="prendreRdvMedecin(medecin.id)">prendre rendez-vous</button>
     </div>
   </div>
 
