--- a/src/app/EspaceMedecin/profile-medecin/profile-medecin.component.html
+++ b/src/app/EspaceMedecin/profile-medecin/profile-medecin.component.html
@@ -12,11 +12,12 @@
           <img src="{{infoMed.image}}">
         </div>
         <h5 style="margin-top: 1rem">Dr {{infoMed.firstname}} {{infoMed.lastname}}</h5>
-        <h6>{{infoMed.specialite}}</h6>
+        <h6>{{getSpecialiteWithoutBrackets(infoMed.specialite)}}</h6>
         <div>
          <ul>
            <li><a href="showProfileMedecin"><i class="bi bi-person-fill" style="color: white; margin-right: 0.5rem"></i>Profile</a></li>
-           <li><a href="messagesM"><i class="bi bi-envelope-fill" style="color: white; margin-right: 0.5rem"></i>Messages</a></li>
+           <li><a href="messagesM"><i class="bi bi-envelope-fill" style="color: white; margin-right: 0.5rem"></i>Demande Rendez-vous</a></li>
+           <li><a href="acceptedRdv"><i class="bi bi-envelope-fill" style="color: white; margin-right: 0.5rem"></i>Rendez-vous Accepté</a></li>
            <li><a href="dashboardMed"><i class="bi bi-pie-chart-fill" style="color: white; margin-right: 0.5rem"></i>Dashboard</a></li>
            <li><a href="parametreMed"><i class="bi bi-gear-fill" style="color: white; margin-right: 0.5rem"></i>Paramètres</a></li>
            <li style="margin-top: 5rem"><a (click)="logOut()"><i class="bi bi-box-arrow-left" style="color: white; margin-right:5px" ></i>Déconnexion</a></li>
