--- a/src/app/composants/header/header.component.html
+++ b/src/app/composants/header/header.component.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent !important; width: 100%; ">
+<nav class="navbar navbar-expand-lg navbar-light bg-light"
+     style="background-color: transparent ; width: 100%;
+"
+     [ngClass]="{'navbar-scroll': navbarScrolled}">
   <div class="image">
     <img src="../assets/image/848.jpg">
   </div>
@@ -6,38 +9,46 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-    <ul class="navbar-nav  " style="justify-content: space-between !important; padding-left:4rem" >
-      <li class="nav-item active " style="margin-left: 2rem">
-        <a class="nav-link" href="">Acceuil </a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav" style="justify-content: space-between !important; padding-left: 4rem;">
+      <li class="nav-item active">
+        <a class="nav-link" href="">Accueil</a>
       </li>
 
-      <li class="nav-item dropdown " style="margin-left: 4rem">
-        <a class="nav-link dropdown-toggle" href="#" style="color: #001B35 ;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" style="color: #001B35;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/chirurgie">Chirurgies</a>
-
         </div>
       </li>
-       <li class="nav-item active " style="margin-left: 4rem">
-         <a class="nav-link" href="/apropos">A Propos </a>
-       </li>
 
-      <li class="nav-item dropdown " style="margin-left: 13rem">
-        <a class="nav-link dropdown-toggle" href="#" style="color: #001B35 ;" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Espace Médecin
-        </a>
-     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-          <a class="dropdown-item" href="inscrire">S'inscrire</a>
-          <div class="dropdown-divider"></div>
-           <a class="dropdown-item" href="authentifier">S'authentifier</a>
-     </div>
-
+      <li class="nav-item active">
+        <a class="nav-link" href="/apropos">A Propos</a>
       </li>
 
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" style="color: #001B35;" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Espace Patient
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+          <a class="dropdown-item" href="signPatient">S'inscrire</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="loginPatient">S'authentifier</a>
+        </div>
+      </li>
 
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" style="color: #001B35;" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Espace Médecin
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+          <a class="dropdown-item" href="inscrire">S'inscrire</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="authentifier">S'authentifier</a>
+        </div>
+      </li>
     </ul>
   </div>
 </nav>
