--- a/src/app/detail-profile/detail-profileA/medecin/list-medecin/list-medecin.component.scss
+++ b/src/app/detail-profile/detail-profileA/medecin/list-medecin/list-medecin.component.scss
@@ -35,19 +35,21 @@ h2 {
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
   }
   .col-1 {
-    flex-basis: 40%;
+    flex-basis: 20%;
     display: flex;
   }
   .col-2 {
     flex-basis: 30%;
   }
   .col-3 {
-    flex-basis: 10%;
+    flex-basis: 20%;
   }
   .col-4 {
     flex-basis: 20%;
   }
-
+  .col-5 {
+    flex-basis: 10%;
+  }
   @media all and (max-width: 767px) {
     .table-header {
       display: none;
