--- a/src/app/detail-profile/detail-profileM/parametres-m/parametres-m.component.html
+++ b/src/app/detail-profile/detail-profileM/parametres-m/parametres-m.component.html
@@ -6,14 +6,17 @@
     <div class="row">
       <div class="col-lg-4">
         <div class="card mb-4">
+          <form [formGroup]="changePhotoForm" (ngSubmit)="changePhoto()">
           <div class="card-body text-center" *ngIf="medecin">
             <img src="{{medecin.image}}" alt="avatar"
                  class="rounded-circle img-fluid" style="width: 150px;">
             <div class=" justify-content-center mb-2 mt-4">
-              <input type="file" accept="image/*" (change)="onSelectFile($event)"  mt-4>
-              <button type="button" class="btn btn-primary mt-4" >changer photo</button>
+              <input type="file" accept="image/*" (change)="onSelectFile($event)"  mt-4
+              formControlName="image">
+              <button type="submit" class="btn btn-primary mt-4" >changer photo</button>
             </div>
           </div>
+          </form>
         </div>
         <div class="card mb-4 mb-lg-0">
           <div class="card-body p-0">
