--- a/src/app/detail-profile/detail-profileP/liste-rendez-vous/liste-rendez-vous.component.html
+++ b/src/app/detail-profile/detail-profileP/liste-rendez-vous/liste-rendez-vous.component.html
@@ -1,1 +1,54 @@
-<p>liste-rendez-vous works!</p>
+<div class="container">
+
+  <h2>Liste des rendez-vous</h2>
+  <ul class="responsive-table">
+    <li class="table-header">
+      <div class="col col-1">type de Chirurgie</div>
+      <div class="col col-2">Nom de Médecin</div>
+      <div class="col col-3">Status de RDV</div>
+      <div class="col col-4">Date de rendez-vous</div>
+      <div class="col col-5"></div>
+
+    </li>
+    <li class="table-row"  *ngFor="let rdv of listRdv">
+      <div class="col col-1" data-label="Email">
+        <div>
+          <p> {{rdv.surgery.name}} </p>
+        </div>
+
+      </div>
+      <div class="col col-2" data-label="Nom et Prénom"> {{rdv.doctor.firstname}} {{rdv.doctor.lastname}}</div>
+      <div class="col col-3" data-label="Status">
+        <p *ngIf="rdv.status === 'IN_PROGRESS'">Votre Demande est en attente <i class="bi bi-circle-fill" style="color: orange ; font-size:10px"></i></p>
+        <p *ngIf="rdv.status === 'ACCEPTED'">Votre Demande est acceptée <i class="bi bi-circle-fill" style="color: green ; font-size:10px"></i>
+          <i>vous serez bientot informé du reste des informations.</i></p>
+        <p *ngIf="rdv.status === 'REJECTED'">Votre demande a été rejetée <i class="bi bi-circle-fill" style="color: red ; font-size:10px"></i></p>
+        <p *ngIf="rdv.status === 'CREATED'">Votre demande a été créé <i class="bi bi-circle-fill" style="color: blue ; font-size:10px"></i></p>
+
+      </div>
+
+      <div class="dropdown  col col-4"  data-label="Action">
+        <p>{{rdv.dateRDV | date: 'yyyy-MM-dd / hh:mm a'}}</p>
+
+      </div>
+
+      <div class="dropdown  col col-5"  data-label="Action">
+
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                style="background-color: white;border: none;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16" style="color:#000 ;">
+            <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+          </svg>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item"  (click)="voirDetail()"> <i class="bi bi-eye-fill" style="color: #3F6589"></i>  Voir Détails</a>
+          <a class="dropdown-item" ><i class="bi bi-trash3-fill"  style="color: #3F6589"></i>  Supprimer</a>
+        </div>
+      </div>
+
+    </li>
+
+
+
+  </ul>
+</div>
