update appointment by patient

--- a/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.html
@@ -20,10 +20,10 @@
           <div class="flip-card"  >
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="{{image}}" alt="Avatar" style="width:300px;height:300px;">
+                <img src="../assets/image/chirugie.png" alt="Avatar" style="width:300px;height:300px;">
 
               </div>
-              <div class="flip-card-back" style="padding-top: 3rem">
+              <div class="flip-card-back" >
                 <h4>Chirurgie la plus requis</h4>
                 <h5>{{name}}</h5>
                 <h6>{{count}} patient ont choisi ce chirurgie.</h6>
@@ -34,10 +34,10 @@
           <div class="flip-card">
             <div class="flip-card-inner" >
               <div class="flip-card-front" >
-                <img src="{{d_image}}" alt="Avatar" style="width:300px;height:300px;">
+                <img src="../assets/image/doc.png" alt="Avatar" style="width:300px;height:300px;">
 
               </div>
-              <div class="flip-card-back"style="padding-top: 3rem">
+              <div class="flip-card-back">
                 <h4>Médecin le plus requis</h4>
                 <h5>{{d_firstname}} {{d_lastname}}</h5>
                 <h6>{{d_count}} rendez-vous ont choisi ce Médecin.</h6>
@@ -49,10 +49,10 @@
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="{{image}}" alt="Avatar" style="width:300px;height:300px;">
+                <img src="../assets/image/logo afrique.jpg" alt="" style="width:300px;height:300px;">
 
               </div>
-              <div class="flip-card-back" style="padding-top: 3rem">
+              <div class="flip-card-back">
                 <h4>pays le plus requis</h4>
                 <h5>{{city_name}}</h5>
                 <h6>{{city_count}} rendez-vous de méme pays</h6>
@@ -103,8 +103,9 @@
 <!-- /.container-fluid -->
 
 <!-- End of Main Content -->
+<!--
 <div
 >
   <canvas id="doughnutChart" baseChart [data]="doughnutChartData" [options]="options"
           [type]="'doughnut'" ></canvas>
-</div>
+</div>-->
