--- a/src/app/detail-profile/detail-profileM/dashboard/dashboard.component.html
+++ b/src/app/detail-profile/detail-profileM/dashboard/dashboard.component.html
@@ -13,12 +13,13 @@
       <!-- Area Chart -->
       <div class="card shadow mb-4">
         <div class="card-header py-3">
-          <h6 class="m-0 font-weight-bold text-primary">Area Chart</h6>
+          <h6 class="m-0 font-weight-bold text-primary">nombre des rendez-vous par mois</h6>
         </div>
         <div class="card-body">
           <div class="chart-area">
-            <div>
-              <canvas id="appointmentChart"></canvas>
+            <div id="container" style="width: 800px; height: 400px; display: block;">
+
+
             </div>
           </div>
           <hr>
