--- a/src/app/detail-profile/detail-profileP/liste-rendez-vous/liste-rendez-vous.component.html
+++ b/src/app/detail-profile/detail-profileP/liste-rendez-vous/liste-rendez-vous.component.html
@@ -21,9 +21,9 @@
       <div class="col col-3" data-label="Status">
         <p *ngIf="rdv.status === 'IN_PROGRESS'">Votre Demande est en attente <i class="bi bi-circle-fill" style="color: orange ; font-size:10px"></i></p>
         <p *ngIf="rdv.status === 'ACCEPTED'">Votre Demande est acceptée <i class="bi bi-circle-fill" style="color: green ; font-size:10px"></i>
-          <i>vous serez bientot informé du reste des informations.</i></p>
+        <br>  <i>vous serez bientot informé du reste des informations.</i></p>
         <p *ngIf="rdv.status === 'REJECTED'">Votre demande a été rejetée <i class="bi bi-circle-fill" style="color: red ; font-size:10px"></i></p>
-        <p *ngIf="rdv.status === 'CREATED'">Votre demande a été créé <i class="bi bi-circle-fill" style="color: blue ; font-size:10px"></i></p>
+        <p *ngIf="rdv?.status === 'CREATED'">Votre demande a été créé <i class="bi bi-circle-fill" style="color: blue ; font-size:10px"></i></p>
 
       </div>
 
@@ -42,7 +42,9 @@
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item"  (click)="voirDetail()"> <i class="bi bi-eye-fill" style="color: #3F6589"></i>  Voir Détails</a>
-          <a class="dropdown-item" ><i class="bi bi-trash3-fill"  style="color: #3F6589"></i>  Supprimer</a>
+          <a class="dropdown-item"  ><i class="bi bi-trash3-fill"  style="color: #3F6589"></i>  Supprimer</a>
+          <a  class="dropdown-item" (click)="modifier(rdv.id)" *ngIf="rdv.status === 'IN_PROGRESS'" ><i class="bi bi-pencil-square"  style="color: #3F6589"></i> Modifier</a>
+
         </div>
       </div>
 
