--- a/src/app/detail-profile/detail-profileA/affecterMedecin/affecter-medecin/affecter-medecin.component.html
+++ b/src/app/detail-profile/detail-profileA/affecterMedecin/affecter-medecin/affecter-medecin.component.html
@@ -1,26 +1,22 @@
 
-<div class="col all-content">
-  <h1>Les Chirurgiens de Chirurgie des valves cardiaque  </h1>
-
-  <div class="row card-med">
-    <div class="card card-content shadow-sm mb-5 bg-white rounded"
-         *ngFor="let medecin of medecins">
-      <div class="image">
-        <img src="{{medecin.image}}">
-      </div>
-      <h5>{{medecin.firstname}} {{medecin.lastname}}</h5>
-      <h5 >{{getSpecialiteWithoutBrackets(medecin.specialite)}}</h5>
-      <div class="btn">
-        <button (click)="voirDetails(medecin.id)">Voir detail</button>
-      </div>
-
+<section>
+  <div class="card"  *ngFor="let medecin of medecins">
+    <div class="img-bx">
+      <img src="{{medecin.image}}" alt="img" />
     </div>
+    <div class="content">
+      <div class="detail">
+        <h2>{{medecin.firstname}} {{medecin.lastname}}<br /><span>{{getSpecialiteWithoutBrackets(medecin.specialite)}}</span></h2>
+        <ul class="sci">
+          <li class="btn">
+            <button (click)="voirDetails(medecin.id)">Voir detail</button>
+          </li>
 
 
-
-
-
-
+        </ul>
+      </div>
+    </div>
   </div>
+</section>
 
-</div>
+
