--- a/src/app/detail-profile/detail-profileA/affecterMedecin/affecter-medecin/affecter-medecin.component.scss
+++ b/src/app/detail-profile/detail-profileA/affecterMedecin/affecter-medecin/affecter-medecin.component.scss
@@ -1,58 +1,117 @@
-.all-content{
-  width: 100%;
-  height: auto;
-  margin:auto;
-  text-align: center;background-color: #EAF9F8;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.desc{
-  // margin-left: 12rem;
-  width: auto;
-  height: 4rem;
-  margin: 2rem auto;
-  color: #1a1f36;
-  text-align: justify;
 
-
-}
-h1{
-  margin-top: 2rem;
-  color: #0066FF;
-}
-.card-med {
-  width: auto;
-  height: auto;
-  margin: auto;
+section {
+  font-family: 'Times New Roman', Times, serif;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  padding: 1rem;
-
+  align-items: center;
 
 }
-.image{
-  width: 17rem;
-  height: 12rem;
-  margin-left: -13px;
-  overflow: hidden;
+
+.card {
+  position: relative;
+  width: 300px;
+  height: 400px;
+  background: #fff;
+  border-radius: 10px;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  background: rgba(255, 255, 255, 0.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(15px);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
 }
-.image img{
+
+.img-bx {
+
   width: 100%;
   height: 100%;
-
+  overflow: hidden;
 
 }
-.card-content{
-  width: 17rem;
-  height: 23rem;
+
+.img-bx img {
+
+  border-bottom-right-radius:10px ;
+  border-bottom-left-radius:10px ;
+  border-top-left-radius:10px ;
+  border-top-right-radius:10px ;
+  width: 100%;
+  height: 50%;
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding-bottom: 30px;
+}
+
+.content .detail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   text-align: center;
-  border: none;
-  margin:1rem;
-  background-color: #0066FF !important;
-  color: white;
 }
+
+.content .detail h2 {
+  color: #444;
+  font-size: 1.6em;
+  font-weight: bolder;
+}
+
+.content .detail h2 span {
+  font-size: 0.7em;
+  color: #03a9f4;
+  font-weight: bold;
+}
+
+.sci {
+  position: relative;
+  display: flex;
+  margin-top: 5px;
+}
+
+.sci li {
+  list-style: none;
+  margin: 4px;
+}
+
+.sci li a {
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: transparent;
+  font-size: 1.5em;
+  color: #444;
+  text-decoration: none;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: 0.5s;
+}
+
+.sci li a:hover {
+  background: #03a9f4;
+  color: #fff;
+}
+
 .btn button{
   width: 12rem;
   height: 2rem;
   text-align: center;
-  border: none;
+  border: 1px solid  #03a9f4;
+;
   border-radius:15px;
   background-color:white ;
   color: #1580EB;
