--- a/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.scss
+++ b/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.scss
@@ -13,6 +13,9 @@ span{
   width: 300px;
   height: 300px;
   perspective: 1000px;
+  border-radius: 10px;
+  margin-left: 2rem;
+  margin-top: 1rem;
 
 }
 
@@ -47,13 +50,15 @@ flip-card-row{
 .flip-card-front {
   background-color: #bbb;
   color: black;
- padding-top: 1rem;
+
+
 }
 
 .flip-card-back {
-  background-color: #2980b9;
+  background-color: #36b9cc;
   color: white;
   transform: rotateY(180deg);
+  padding-top:6rem
 }
 
 
