--- a/src/app/detail-profile/detail-profileM/parametres-m/parametres-m.component.html
+++ b/src/app/detail-profile/detail-profileM/parametres-m/parametres-m.component.html
@@ -66,7 +66,7 @@
 
 
       <div class="col-lg-8">
-        <form  [formGroup]="MedecinForm">
+        <form  [formGroup]="MedecinForm" (ngSubmit)="updateDoctor()">
         <div class="card mb-4">
 
           <div class="card-body">
@@ -178,11 +178,13 @@
             </ng-container>
 
           </div>
+          <div style="margin: auto; width: 16rem;margin-bottom: 1rem">
+            <button type="submit" class="btn btn-primary"
+                    style="width: 16rem;">Mettre à jours</button>
+          </div>
         </div>
 
-            <div>
-              <button type="button" class="btn btn-primary">Mettre à jours</button>
-            </div>
+
 
         </form>
       </div>
